Bug 1394024 - Handle null string when alerting plugin about Windows microphone change. r=jimm, a=lizzard

Fixes crash when unplugging the only available microphone.